[gd_scene load_steps=35 format=3 uid="uid://y4vjepug1yfk"]

[ext_resource type="Script" uid="uid://dfirfs3haff65" path="res://Scripts/character_body_2d.gd" id="1_1jxqw"]
[ext_resource type="Texture2D" uid="uid://bko53pbiblu7y" path="res://Sprites/Player/Elliot (5).png" id="2_dw050"]
[ext_resource type="Texture2D" uid="uid://xu0u5c15j4lb" path="res://Sprites/Player/Elliot (1).png" id="3_b26j0"]
[ext_resource type="Texture2D" uid="uid://d0dtthwu41pbe" path="res://Sprites/Player/Player Tileset.png" id="4_n7ghd"]
[ext_resource type="Texture2D" uid="uid://crk0npw8nrmv5" path="res://Sprites/Player/pizza-1.png.png" id="5_n7ghd"]
[ext_resource type="Texture2D" uid="uid://d4lvnyv1lvqfx" path="res://Sprites/UI Buttons/Buttons Customization/Buttons/Menu/B_Menu1.png" id="6_ivps1"]
[ext_resource type="Script" uid="uid://b8bw2eqfcg1qc" path="res://menu_button.gd" id="7_urp6f"]
[ext_resource type="AudioStream" uid="uid://dbywjsmuipkqh" path="res://Sounds/lift.wav" id="8_b26j0"]
[ext_resource type="AudioStream" uid="uid://b723abcxn6kr8" path="res://Sounds/hit01.wav" id="9_b26j0"]
[ext_resource type="PackedScene" uid="uid://dgmbnoxibbr3g" path="res://particle7.tscn" id="10_n7ghd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7jktm"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ryrav"]
radius = 7.07107

[sub_resource type="AtlasTexture" id="AtlasTexture_80cx4"]
atlas = ExtResource("2_dw050")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iotsf"]
atlas = ExtResource("3_b26j0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc2xo"]
atlas = ExtResource("3_b26j0")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_215e1"]
atlas = ExtResource("3_b26j0")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sc4i"]
atlas = ExtResource("3_b26j0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5wjh"]
atlas = ExtResource("4_n7ghd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vef74"]
atlas = ExtResource("4_n7ghd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hve3p"]
atlas = ExtResource("4_n7ghd")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfdv2"]
atlas = ExtResource("4_n7ghd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_feb5d"]
atlas = ExtResource("4_n7ghd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2o6t"]
atlas = ExtResource("4_n7ghd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc0e3"]
atlas = ExtResource("4_n7ghd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jktm"]
atlas = ExtResource("4_n7ghd")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryrav"]
atlas = ExtResource("4_n7ghd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eow3j"]
atlas = ExtResource("4_n7ghd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8heu"]
atlas = ExtResource("2_dw050")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fc0e3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80cx4")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iotsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc2xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_215e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sc4i")
}],
"loop": true,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5wjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vef74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hve3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfdv2")
}],
"loop": true,
"name": &"fall",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_feb5d")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2o6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc0e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jktm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryrav")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eow3j")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8heu")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_e36ub"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_n7ghd")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1jxqw"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nvl01"]
particle_flag_disable_z = true
gravity = Vector3(0, -58.495, 0)
turbulence_enabled = true
turbulence_noise_strength = 14.6
turbulence_noise_scale = 4.555

[sub_resource type="Gradient" id="Gradient_b26j0"]
offsets = PackedFloat32Array(0, 0.363636, 0.753247)
colors = PackedColorArray(1, 1, 1, 1, 0.400698, 0.400698, 0.400698, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n7ghd"]
gradient = SubResource("Gradient_b26j0")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_1jxqw")

[node name="NormalCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_7jktm")

[node name="CrouchCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_ryrav")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fc0e3")
animation = &"jump"
autoplay = "idle"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
position = Vector2(18, 1)
sprite_frames = SubResource("SpriteFrames_e36ub")
autoplay = "default"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 11.2

[node name="HeadRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
scale = Vector2(1, 1.5)
shape = SubResource("CircleShape2D_1jxqw")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_b26j0")
volume_db = -5.982

[node name="DeathSound" type="AudioStreamPlayer" parent="." groups=["player"]]
stream = ExtResource("9_b26j0")
volume_db = -4.371

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -280.0
offset_top = -153.0
offset_right = -7.0
offset_bottom = -124.0
text = "Objective: Deliver pizza to Gubby"

[node name="Menu Button" type="Button" parent="."]
offset_left = 196.0
offset_top = -162.0
offset_right = 300.0
offset_bottom = -122.0
icon = ExtResource("6_ivps1")
flat = true
script = ExtResource("7_urp6f")

[node name="Node2D" parent="." instance=ExtResource("10_n7ghd")]
position = Vector2(0, 15)

[node name="Particles and Light" type="Node2D" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="Particles and Light"]
modulate = Color(0.439049, 0.439049, 0.439049, 1)
position = Vector2(18, 3)
amount = 2
lifetime = 1.13
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_nvl01")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="Particles and Light"]
modulate = Color(0.439049, 0.439049, 0.439049, 1)
position = Vector2(13, 3)
amount = 3
lifetime = 1.4
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_nvl01")

[node name="GPUParticles2D3" type="GPUParticles2D" parent="Particles and Light"]
modulate = Color(0.439049, 0.439049, 0.439049, 1)
position = Vector2(23, 3)
amount = 2
lifetime = 1.4
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_nvl01")

[node name="PointLight2D" type="PointLight2D" parent="Particles and Light"]
color = Color(1, 0.796987, 0.579379, 1)
texture = SubResource("GradientTexture2D_n7ghd")
texture_scale = 5.0

[node name="Sounds and UI" type="Node2D" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="pressed" from="Menu Button" to="Menu Button" method="_on_pressed"]
